--- a/templates/home.html
+++ b/templates/home.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Group Planner - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
 <body>
 {% include "_includes/_navbar.html"%}
+<div class="grid">
+    <div class="row">
+        <div class="col">
+            <!-- Calendar here -->
+        </div>
+        <div class="col-sm">
+            <h3>Group Members</h3>
 
-Hello, {{session["name"]}}
-
+            <table class="table">
+                <tbody>
+                <tr><td>{{ session["name"].title() }}</td></tr>
+                {% for member in groupMembers %}
+                <tr><td>{{member[0].title()}}</td></tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
         crossorigin="anonymous"></script>
