--- a/templates/home.html
+++ b/templates/home.html
@@ -37,11 +37,14 @@ table .selected {
 
         <div class="col-sm">
             <div class="container mt-4">
-                <h3>Group Members</h3>
+                <h3>Group Availability</h3>
 
                 <table class="table">
+                <thead>
+                    <th>Date</th>
+                    <th>Number Free</th>
+                </thead>
                     <tbody>
-                    <tr><td>{{ session["name"].title() }}</td></tr>
                     {% for member in groupMembers %}
                     <tr><td>{{member[0].title()}}</td></tr>
                     {% endfor %}
@@ -51,7 +54,7 @@ table .selected {
             </div>
         </div>
 
-        <div class="col-sm">
+        <!--div class="col-sm">
             <div class="container mt-4">
                 <h3>Group Members</h3>
 
@@ -64,7 +67,7 @@ table .selected {
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div-->
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
