--- a/templates/home.html
+++ b/templates/home.html
@@ -1,86 +1,67 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<style>
-table .selected {
-  background-color: #ccc;
-}
-</style>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <style>
+    table .selected {
+      background-color: #ccc;
+    }
+  </style>
 </head>
 <body>
-{% include "_includes/_navbar.html"%}
-<div class="grid">
+  {% include "_includes/_navbar.html"%}
+  <div class="grid">
     <div class="row">
-        <div class="col-sm">
-            <div class="container" style="text-align: center">
-                 <div class="row mt-4">
-                     <div class="col-4 text-end">
-                         <button class="btn btn-light me-2" onclick="prevMonth()"><i class="material-icons">keyboard_arrow_left</i></button>
-                     </div>
-                      <div class="col-4 text-center">
-                          <h2 id="monthDisplay" class="mt-2">Select a Date Range</h2>
-                      </div>
-                      <div class="col-4">
-                          <button class="btn btn-light" onclick="nextMonth()"><i class="material-icons">keyboard_arrow_right</i></button>
-                      </div>
-                </div>
-                <div id="calendar"></div>
-                <button class="btn btn-dark" onclick="printAndClearSelectedDates()">Mark Available</button>
+      <div class="col-sm">
+        <div class="container" style="text-align: center">
+          <div class="row mt-4">
+            <div class="col-4 text-end">
+              <button class="btn btn-light me-2" onclick="prevMonth()"><i class="material-icons">keyboard_arrow_left</i></button>
             </div>
+            <div class="col-4 text-center">
+              <h2 id="monthDisplay" class="mt-2">Select a Date Range</h2>
+            </div>
+            <div class="col-4">
+              <button class="btn btn-light" onclick="nextMonth()"><i class="material-icons">keyboard_arrow_right</i></button>
+            </div>
+          </div>
+          <div id="calendar"></div>
+          <form id="dateForm" method="POST"> <!-- Form added -->
+            <input type="hidden" id="selectedDatesInput" name="selectedDates" value=""> <!-- Hidden input field to store selected dates -->
+            <button class="btn btn-dark" onclick="submitSelectedDates()">Mark Available</button> <!-- Button to trigger form submission -->
+          </form>
         </div>
+      </div>
 
-        <div class="col-sm">
-            <div class="container mt-4">
-                <h3>Group Availability</h3>
-
-                <table class="table">
-                <thead>
-                    <th>Date</th>
-                    <th>Number Free</th>
-                </thead>
-                    <tbody>
-                    {% for member in groupMembers %}
-                    <tr><td>{{member[0].title()}}</td></tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-
-            </div>
+      <div class="col-sm">
+        <div class="container mt-4">
+          <h3>Group Availability</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Number Free</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for date in topDays %}
+                  <tr><td>{{date[0]}}</td><td>{{date[1]}}</td></tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-
-        <!--div class="col-sm">
-            <div class="container mt-4">
-                <h3>Group Members</h3>
-
-                <table class="table">
-                    <tbody>
-                    <tr><td>{{ session["name"].title() }}</td></tr>
-                    {% for member in groupMembers %}
-                    <tr><td>[1]</td><td>{{member[0].title()}}</td></tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div-->
+      </div>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script>
     var selectedDates = [];
     var currentDate = new Date();
     const todaysDate = new Date();
-
-    function printAndClearSelectedDates() {
-      console.log("Selected Dates:", selectedDates);
-      selectedDates = [];
-      createCalendar(currentDate.getFullYear(), currentDate.getMonth());
-    }
 
     function createCalendar(year, month) {
       var calendar = document.getElementById("calendar");
@@ -128,24 +109,24 @@ table .selected {
             cell.textContent = date;
 
             cell.addEventListener("click", function() {
-                  var selectedDate = new Date(year, month, parseInt(this.textContent));
-                  if (!this.classList.contains("selected")) {
-                    this.classList.add("selected");
-                    selectedDates.push(selectedDate);
-                  } else {
-                    this.classList.remove("selected");
-                    var index = selectedDates.findIndex(function(date) {
-                      return date.getTime() === selectedDate.getTime();
-                    });
-                    if (index > -1) {
-                      selectedDates.splice(index, 1);
-                    }
-                  }
+              var selectedDate = new Date(Date.UTC(year, month, parseInt(this.textContent)));
+              if (!this.classList.contains("selected")) {
+                this.classList.add("selected");
+                selectedDates.push(selectedDate);
+              } else {
+                this.classList.remove("selected");
+                var index = selectedDates.findIndex(function(date) {
+                  return date.getTime() === selectedDate.getTime();
                 });
+                if (index > -1) {
+                  selectedDates.splice(index, 1);
+                }
+              }
+            });
 
             /*if (date === todaysDate.getDate() && month === todaysDate.getMonth() && year === todaysDate.getFullYear()) {
-                cell.style.background = "blue";
-                cell.style.color = "white";
+              cell.style.background = "blue";
+              cell.style.color = "white";
             }*/
 
             row.appendChild(cell);
@@ -174,6 +155,12 @@ table .selected {
     function nextMonth() {
       currentDate.setMonth(currentDate.getMonth() + 1);
       createCalendar(currentDate.getFullYear(), currentDate.getMonth());
+    }
+
+    function submitSelectedDates() {
+      var selectedDatesInput = document.getElementById("selectedDatesInput");
+      selectedDatesInput.value = JSON.stringify(selectedDates);
+      document.getElementById("dateForm").submit();
     }
 
     createCalendar(currentDate.getFullYear(), currentDate.getMonth());
