Added ability to view previously selected dates

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
           <div id="calendar"></div>
           <form id="dateForm" method="POST"> <!-- Form added -->
             <input type="hidden" id="selectedDatesInput" name="selectedDates" value=""> <!-- Hidden input field to store selected dates -->
-            <button class="btn btn-dark" onclick="submitSelectedDates()">Mark Available</button> <!-- Button to trigger form submission -->
+            <button class="btn btn-dark" onclick="submitSelectedDates()">Update Availability</button> <!-- Button to trigger form submission -->
           </form>
         </div>
       </div>
@@ -49,7 +49,7 @@
             </thead>
             <tbody>
               {% for date in topDays %}
-                  <tr><td>{{date[0]}}</td><td>{{date[1]}}</td></tr>
+                  <tr><td>{{date[0]}}</td><td>{{date[1]}}/{{userCount}}</td></tr>
               {% endfor %}
             </tbody>
           </table>
@@ -59,9 +59,23 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script>
-    var selectedDates = [];
+    var selectedDates = JSON.parse('{{ selected_dates | tojson }}');
     var currentDate = new Date();
     const todaysDate = new Date();
+
+    function checkInitialSelection(year, month, date) {
+        var selectedDate = new Date(year, month, date);
+
+        return selectedDates.some(function(d) {
+          date = new Date(d)
+            console.log(typeof d)
+            return (
+            date.getFullYear() === selectedDate.getFullYear() &&
+            date.getMonth() === selectedDate.getMonth() &&
+            date.getDate() === selectedDate.getDate()
+          );
+        });
+      }
 
     function createCalendar(year, month) {
       var calendar = document.getElementById("calendar");
@@ -107,6 +121,10 @@
           } else {
             var cell = document.createElement("td");
             cell.textContent = date;
+
+            if (checkInitialSelection(year, month, date)) {
+                cell.classList.add("selected");
+            }
 
             cell.addEventListener("click", function() {
               var selectedDate = new Date(Date.UTC(year, month, parseInt(this.textContent)));
