Added ability to remove previously selected days

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,7 @@
           <div id="calendar"></div>
           <form id="dateForm" method="POST"> <!-- Form added -->
             <input type="hidden" id="selectedDatesInput" name="selectedDates" value=""> <!-- Hidden input field to store selected dates -->
+              <input type="hidden" id="removedDatesInput" name="removedDates" value=""> <!-- Hidden input field to store removed dates -->
             <button class="btn btn-dark" onclick="submitSelectedDates()">Update Availability</button> <!-- Button to trigger form submission -->
           </form>
         </div>
@@ -60,6 +61,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script>
     var selectedDates = JSON.parse('{{ selected_dates | tojson }}');
+    var removedDates = [];
     var currentDate = new Date();
     const todaysDate = new Date();
 
@@ -131,14 +133,18 @@
               if (!this.classList.contains("selected")) {
                 this.classList.add("selected");
                 selectedDates.push(selectedDate);
+                removedDates.pop(selectedDate);
               } else {
                 this.classList.remove("selected");
+                selectedDates.pop(selectedDate);
+                removedDates.push(selectedDate)
+                /*
                 var index = selectedDates.findIndex(function(date) {
                   return date.getTime() === selectedDate.getTime();
                 });
                 if (index > -1) {
                   selectedDates.splice(index, 1);
-                }
+                }*/
               }
             });
 
@@ -178,6 +184,10 @@
     function submitSelectedDates() {
       var selectedDatesInput = document.getElementById("selectedDatesInput");
       selectedDatesInput.value = JSON.stringify(selectedDates);
+
+      var removedDatesInput = document.getElementById("removedDatesInput");
+      removedDatesInput.value = JSON.stringify(removedDates);
+
       document.getElementById("dateForm").submit();
     }
 
