Added ability to leave group

--- a/templates/_includes/_navbar.html
+++ b/templates/_includes/_navbar.html
@@ -18,6 +18,8 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{{ url_for('changeScreenName') }}">Change Screen Name</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('leaveGroup') }}">Leave Group</a></li>
+                    <hr>
                     <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                 </ul>
             </div>
