--- a/templates/home.html
+++ b/templates/home.html
@@ -16,11 +16,12 @@
 </head>
 <body>
 {% include "_includes/_navbar.html" %}
+{% include '_includes/_toast.html' %}
 <div class="grid">
     <div class="row">
         <div class="col-sm">
-            <div class="container" style="text-align: center">
-                <div class="row mt-4">
+            <div class="container mt-4" style="text-align: center">
+                <div class="row">
                     <div class="col-4 text-end">
                         <button class="btn btn-light me-2" onclick="prevMonth()"><i class="material-icons">keyboard_arrow_left</i>
                         </button>
@@ -73,6 +74,27 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+<script>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            var message = "{{ messages[0] }}";  // Assuming you only flash one message at a time
+            var toast = new bootstrap.Toast(document.querySelector('.toast'));
+            toastBody.innerHTML = message;
+            if (true) {
+                mainToast.classList.add("text-bg-success");
+            } else {
+                mainToast.classList.add("text-bg-danger");
+            }
+            toast.show();
+            var toastElement = document.querySelector('.toast');
+            toastElement.addEventListener('click', function () {
+                toast.hide();
+            });
+        {% endif %}
+    {% endwith %}
+</script>
+
 <script>
     var selectedDates = JSON.parse('{{ selected_dates | tojson }}');
     var removedDates = [];
