--- a/templates/_includes/_navbar.html
+++ b/templates/_includes/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Group Planner Application</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">Group Planner Application</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{{ url_for('changeScreenName') }}">Change Screen Name</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('leaveGroup') }}">Leave Group</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('leaveGroup') }}">Delete my user</a></li>
                     <hr>
                     <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                 </ul>
